# TopologicalSmoothing

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  test_shapes.py  topology_smoothing.py
toposmooth/: __init__.py  __main__.py
